removing bulk upload template functionality