@@ -5,10 +5,6 @@ import static org.junit.Assert.assertFalse;
 import static org.junit.Assert.assertTrue;
 
 import java.io.File;
-import java.io.FileInputStream;
-import java.io.FileNotFoundException;
-import java.io.FileOutputStream;
-import java.io.IOException;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collections;
@@ -19,7 +15,6 @@ import java.util.Set;
 
 import org.apache.commons.collections.Transformer;
 import org.apache.commons.io.FileUtils;
-import org.apache.commons.io.IOUtils;
 import org.apache.cxf.common.util.StringUtils;
 import org.junit.Assert;
 import org.junit.Test;
@@ -54,16 +49,14 @@ import org.tdar.core.bean.resource.ResourceNoteType;
 import org.tdar.core.bean.resource.Status;
 import org.tdar.core.dao.resource.ResourceCollectionDao;
 import org.tdar.core.service.SerializationService;
-import org.tdar.core.service.bulk.BulkUploadTemplate;
 import org.tdar.junit.MultipleTdarConfigurationRunner;
 import org.tdar.junit.RunWithTdarConfiguration;
 import org.tdar.struts.action.AbstractAdminControllerITCase;
-import org.tdar.struts_base.action.TdarActionException;
+import org.tdar.struts.action.bulk.BulkUpdateStatusAction;
+import org.tdar.struts.action.bulk.BulkUploadController;
 import org.tdar.struts_base.action.TdarActionSupport;
 import org.tdar.utils.Pair;
 import org.tdar.utils.TestConfiguration;
-
-import com.opensymphony.xwork2.Action;
 
 /**
  * $Id$
@@ -82,25 +75,6 @@ public class BulkUploadControllerITCase extends AbstractAdminControllerITCase {
 
     @Autowired
     SerializationService serializationService;
-
-    @Test
-    @Rollback
-    public void testExcelTemplate() throws FileNotFoundException, IOException, TdarActionException {
-        BulkUploadController bulkUploadController = generateNewInitializedController(BulkUploadController.class);
-        bulkUploadController.prepare();
-        File file = File.createTempFile("tempTemplate", ".xls");
-        String downloadBulkTemplate = bulkUploadController.downloadBulkTemplate();
-        logger.info(bulkUploadController.getTemplateFile().getCanonicalPath());
-        assertEquals(Action.SUCCESS, downloadBulkTemplate);
-        FileInputStream templateInputStream = bulkUploadController.getTemplateInputStream();
-        assertFalse(null == templateInputStream);
-        FileOutputStream fos = new FileOutputStream(file);
-        IOUtils.copy(templateInputStream, fos);
-        logger.info(file.getCanonicalPath());
-        fos.close();
-        assertTrue(file.exists());
-        assertTrue(file.length() > 0);
-    }
 
     @Test
     @Rollback()
@@ -132,7 +106,7 @@ public class BulkUploadControllerITCase extends AbstractAdminControllerITCase {
         bulkUploadController.setApprovedSiteTypeKeywordIds(siteTypeKeywordIds);
         ResourceNote note = new ResourceNote(ResourceNoteType.GENERAL, "A harrowing tale of note");
         bulkUploadController.getResourceNotes().addAll(Arrays.asList(note));
-        bulkUploadController.getPersistable().setTitle(BulkUploadTemplate.BULK_TEMPLATE_TITLE);
+        bulkUploadController.getPersistable().setTitle("test");
         // add some source/ comparative collections
         addComparitiveCollections(bulkUploadController);
 
@@ -141,15 +115,15 @@ public class BulkUploadControllerITCase extends AbstractAdminControllerITCase {
         // saving
         bulkUploadController.setServletRequest(getServletPostRequest());
         assertEquals(TdarActionSupport.SUCCESS_ASYNC, bulkUploadController.save());
-        bulkUploadController.checkStatus();
-        assertEquals(new Float(100), bulkUploadController.getPercentDone());
+        BulkUpdateStatusAction basa = checkStatus(ticketId);
+        assertEquals(new Float(100), basa.getPercentDone());
         evictCache();
-        List<Pair<Long, String>> details = bulkUploadController.getDetails();
+        List<Pair<Long, String>> details = basa.getDetails();
         boolean manifest_gc = false;
         boolean manifest_book = false;
         logger.info("{}", details);
-        logger.info(bulkUploadController.getAsyncErrors());
-        assertTrue(StringUtils.isEmpty(bulkUploadController.getAsyncErrors()));
+        logger.info(basa.getAsyncErrors());
+        assertTrue(StringUtils.isEmpty(basa.getAsyncErrors()));
         for (Pair<Long, String> detail : details) {
             Resource resource = resourceService.find(detail.getFirst());
             logger.info("{}", resource);
@@ -164,43 +138,10 @@ public class BulkUploadControllerITCase extends AbstractAdminControllerITCase {
             ResourceNote resourceNote = resource.getResourceNotes().iterator().next();
             assertEquals(note.getType(), resourceNote.getType());
             assertEquals(note.getNote(), resourceNote.getNote());
-            assertFalse(resource.getResourceCreators().isEmpty());
+            assertTrue(resource.getResourceCreators().isEmpty());
             assertEquals(projectId, ((InformationResource) resource).getProjectId());
-            if (resource.getTitle().equals("Grand Canyon")) {
-                assertEquals("A photo of the grand canyon", resource.getDescription());
-                assertEquals(1, resource.getResourceCreators().size());
-                ResourceCreator creator = resource.getResourceCreators().iterator().next();
-                assertEquals(ResourceCreatorRole.CREATOR, creator.getRole());
-                assertEquals(TestConfiguration.getInstance().getUserId(), creator.getCreator().getId());
-                manifest_gc = true;
-            }
-            if (resource.getTitle().equals("Handbooks of Archaeology and Antiqvities")) {
-                assertEquals("old book", resource.getDescription());
-                assertEquals(2, resource.getResourceCreators().size());
-                // test resource.getResourceCreators() OrderBy.
-                // Iterator<ResourceCreator> iterator = resource.getResourceCreators().iterator();
-                // ResourceCreator rc = iterator.next();
-                // assertEquals(ResourceCreatorRole.SPONSOR, rc.getRole());
-                // assertEquals(TestConstants.TEST_INSTITUTION_ID, rc.getCreator().getId());
-                // rc = iterator.next();
-                // assertEquals(ResourceCreatorRole.LAB_DIRECTOR, rc.getRole());
-                // assertEquals(TestConstants.ADMIN_USER_ID, rc.getCreator().getId());
-                //
-                HashMap<Integer, ResourceCreator> map = new HashMap<Integer, ResourceCreator>();
-                for (ResourceCreator rc : resource.getResourceCreators()) {
-                    map.put(rc.getSequenceNumber(), rc);
-                }
-                assertEquals(ResourceCreatorRole.SPONSOR, map.get(0).getRole());
-                assertEquals(TestConstants.TEST_INSTITUTION_ID, map.get(0).getCreator().getId());
-                assertEquals(ResourceCreatorRole.LAB_DIRECTOR, map.get(1).getRole());
-                assertEquals(TestConfiguration.getInstance().getAdminUserId(), map.get(1).getCreator().getId());
-                manifest_book = true;
-            }
             assertSourceAndComparitiveCollections(resource);
         }
-        assertTrue("handbook of archaeology not found", manifest_book);
-        assertTrue("grand canyon photo not found", manifest_gc);
-
     }
 
     private void addComparitiveCollections(BulkUploadController bulkUploadController) {
@@ -257,18 +198,6 @@ public class BulkUploadControllerITCase extends AbstractAdminControllerITCase {
         return sc;
     }
 
-    @Test
-    @Rollback
-    public void testBadBulkUpload() throws Exception {
-        BulkUploadController bulkUploadController = setupBasicBulkUploadTest("image_manifest2.xlsx");
-        assertEquals(new Float(100), bulkUploadController.getPercentDone());
-
-        List<Pair<Long, String>> details = bulkUploadController.getDetails();
-        logger.info("{}", details);
-        logger.debug(bulkUploadController.getAsyncErrors());
-        assertFalse(StringUtils.isEmpty(bulkUploadController.getAsyncErrors()));
-        assertTrue(bulkUploadController.getAsyncErrors().contains("resource creator is not valid"));
-    }
 
     @Test
     @Rollback
@@ -278,106 +207,36 @@ public class BulkUploadControllerITCase extends AbstractAdminControllerITCase {
         File file = new File(TestConstants.TEST_DATA_INTEGRATION_DIR, "Pundo faunal remains.xls");
         files.add(file);
         assertTrue(file.exists());
-        BulkUploadController bulkUploadController = setupBasicBulkUploadTest("dataset_manifest.xlsx", TdarActionSupport.SUCCESS_ASYNC, files);
-        assertEquals(new Float(100), bulkUploadController.getPercentDone());
+        BulkUploadController bulkUploadController = setupBasicBulkUploadTest( TdarActionSupport.SUCCESS_ASYNC, files);
+        BulkUpdateStatusAction basa = checkStatus(bulkUploadController.getTicketId());
+        assertEquals(new Float(100), basa.getPercentDone());
 
-        List<Pair<Long, String>> details = bulkUploadController.getDetails();
+        List<Pair<Long, String>> details = basa.getDetails();
         logger.info("{}", details);
-        logger.debug(bulkUploadController.getAsyncErrors());
-        assertTrue(StringUtils.isEmpty(bulkUploadController.getAsyncErrors()));
+        logger.debug(basa.getAsyncErrors());
+        assertTrue(StringUtils.isEmpty(basa.getAsyncErrors()));
     }
 
     @Test
     @Rollback
     public void testBulkUploadWithFloat() throws Exception {
-        BulkUploadController bulkUploadController = setupBasicBulkUploadTest("image_manifest_float_date.xls");
-        assertEquals(new Float(100), bulkUploadController.getPercentDone());
+        BulkUploadController bulkUploadController = setupBasicBulkUploadTest(TdarActionSupport.SUCCESS_ASYNC);
+        BulkUpdateStatusAction basa = checkStatus(bulkUploadController.getTicketId());
+
+        assertEquals(new Float(100), basa.getPercentDone());
         // testing that an Float that is effectively an int 120.00 is ok in an int field
-        List<Pair<Long, String>> details = bulkUploadController.getDetails();
+        List<Pair<Long, String>> details = basa.getDetails();
         logger.info("{}", details);
-        logger.debug(bulkUploadController.getAsyncErrors());
-        assertTrue(StringUtils.isEmpty(bulkUploadController.getAsyncErrors()));
+        logger.debug(basa.getAsyncErrors());
+        assertTrue(StringUtils.isEmpty(basa.getAsyncErrors()));
         Resource find1 = resourceService.find(details.get(0).getFirst());
         assertEquals(Status.ACTIVE, find1.getStatus());
         assertTrue(resourceService.find(details.get(1).getFirst()).isActive());
-        assertEquals(new Integer(1234), ((InformationResource) resourceService.find(details.get(0).getFirst())).getDate());
-        assertEquals(new Integer(2222), ((InformationResource) resourceService.find(details.get(1).getFirst())).getDate());
+//        assertEquals(new Integer(1234), ((InformationResource) resourceService.find(details.get(0).getFirst())).getDate());
+//        assertEquals(new Integer(2222), ((InformationResource) resourceService.find(details.get(1).getFirst())).getDate());
     }
 
-    @SuppressWarnings("unused")
-    @Test
-    @Rollback
-    public void testBadBulkUploadNewFormat() throws Exception {
-        BulkUploadController bulkUploadController = setupBasicBulkUploadTest("bulk_upload_newer_ok.xls");
-        assertEquals(new Float(100), bulkUploadController.getPercentDone());
-
-        List<Pair<Long, String>> details = bulkUploadController.getDetails();
-        logger.debug(bulkUploadController.getAsyncErrors());
-        assertFalse(StringUtils.isEmpty(bulkUploadController.getAsyncErrors()));
-        assertTrue(bulkUploadController.getAsyncErrors().contains(
-                "<li>5127663428_42ef7f4463_b.jpg : the fieldname Book Title is not valid for the resource type: IMAGE</li>"));
-        // should be two results, one deleted b/c of errors
-        assertEquals(0, bulkUploadController.getDetails().size());
-        // assertEquals(Status.DELETED, resourceService.find(details.get(0).getFirst()).getStatus());
-        // assertEquals(Status.ACTIVE, resourceService.find(details.get(1).getFirst()).getStatus());
-    }
-
-    @Test
-    @Rollback
-    public void testBadBulkUploadMissingDates() throws Exception {
-        BulkUploadController bulkUploadController = setupBasicBulkUploadTest("image_manifest_no_dates.xlsx");
-        assertEquals(new Float(100), bulkUploadController.getPercentDone());
-
-        List<Pair<Long, String>> details = bulkUploadController.getDetails();
-        logger.info("{}", details);
-        logger.debug(bulkUploadController.getAsyncErrors());
-        assertFalse(StringUtils.isEmpty(bulkUploadController.getAsyncErrors()));
-        assertTrue(bulkUploadController.getAsyncErrors().contains("<li>the following columns are required: Date Created (Year)</li>"));
-    }
-
-    @Test
-    @Rollback
-    public void testBadBulkUploadMissingDatesAndDescription() throws Exception {
-        BulkUploadController bulkUploadController = setupBasicBulkUploadTest("image_manifest_no_description_or_date.xlsx");
-        assertEquals(new Float(100), bulkUploadController.getPercentDone());
-
-        List<Pair<Long, String>> details = bulkUploadController.getDetails();
-        logger.info("{}", details);
-        logger.debug(bulkUploadController.getAsyncErrors());
-        assertFalse(StringUtils.isEmpty(bulkUploadController.getAsyncErrors()));
-
-        assertTrue(bulkUploadController.getAsyncErrors().contains("<li>the following columns are required: Description, Date Created (Year)</li>"));
-    }
-
-    @Test
-    @Rollback
-    public void testBadBulkUploadManifestColumnHasBlanks() throws Exception {
-        String manifestFilename = "document_manifest_required_col_has_blanks.xls";
-        // this file should fail validation and shouldn't even get to the async saving part.
-        // the controller will always return success, however
-        BulkUploadController bulkUploadController = setupBasicBulkUploadTest(manifestFilename, TdarActionSupport.SUCCESS_ASYNC);
-        logger.debug(bulkUploadController.getAsyncErrors());
-        assertFalse(StringUtils.isEmpty(bulkUploadController.getAsyncErrors()));
-        assertFalse(bulkUploadController.getAsyncErrors().contains("<li>the following columns are required: Title, Description, Date Created (Year)</li>"));
-        assertTrue(bulkUploadController
-                .getAsyncErrors()
-                .contains(
-                        "<li>Filename \"Codes E1 txt\" was not found in the import batch</li>"
-                                + "<li>Filename \"Codes E2.txt\" was not found in the import batch</li>"
-                                + "<li>Filename \"Codes E3.txt\" was not found in the import batch</li>"
-                                + "<li>Filename \"Codes E4.txt\" was not found in the import batch</li>"
-                                + "<li>Filename \"Codes E5A.txt\" was not found in the import batch</li>"
-                                + "<li>Filename \"Codes E5B.txt\" was not found in the import batch</li>"
-                                + "<li>Filename \"Codes E6.txt\" was not found in the import batch</li>"
-                                + "<li>Filename \"Codes E7.txt\" was not found in the import batch</li"
-                                + "><li>Filename \"Codes E8.txt\" was not found in the import batch</li>"
-                                + "<li>Filename \"Codes E9.txt\" was not found in the import batch</li>"
-                                + "<li>Filename \"Codes E10.txt\" was not found in the import batch</li>"
-                                + "<li>Filename \"Codes E11.txt\" was not found in the import batch</li>"
-                                + "<li>Filename \"Codes E12.txt\" was not found in the import batch</li>"));
-    }
-
-    private BulkUploadController setupBasicBulkUploadTest(String manifestName, String expectedResponse, List<File> uploadFiles) throws Exception {
+    private BulkUploadController setupBasicBulkUploadTest(String expectedResponse, List<File> uploadFiles) throws Exception {
         TdarUser user = createAndSaveNewPerson();
         BulkUploadController bulkUploadController = generateNewController(BulkUploadController.class);
         init(bulkUploadController, user);
@@ -388,27 +247,30 @@ public class BulkUploadControllerITCase extends AbstractAdminControllerITCase {
         bulkUploadController.setTicketId(ticketId);
         bulkUploadController.setProjectId(TestConstants.ADMIN_INDEPENDENT_PROJECT_ID);
         // setup controller
-        bulkUploadController.setUploadedFiles(Arrays.asList(new File(TestConstants.TEST_BULK_DIR + manifestName)));
-        bulkUploadController.setUploadedFilesFileName(Arrays.asList(manifestName));
         bulkUploadController.setFileProxies(proxyPair.getSecond());
         bulkUploadController.setAsync(false);
         // saving
         bulkUploadController.setServletRequest(getServletPostRequest());
         assertEquals(expectedResponse, bulkUploadController.save());
-        bulkUploadController.checkStatus();
+        checkStatus(ticketId);
         return bulkUploadController;
     }
 
-    private BulkUploadController setupBasicBulkUploadTest(String manifestName) throws Exception {
-        return setupBasicBulkUploadTest(manifestName, TdarActionSupport.SUCCESS_ASYNC);
+    private BulkUpdateStatusAction checkStatus(final Long ticketId) {
+        BulkUpdateStatusAction basa = generateNewInitializedController(BulkUpdateStatusAction.class);
+        basa.setTicketId(ticketId);
+        basa.prepare();
+        basa.checkStatus();
+        return basa;
     }
 
-    private BulkUploadController setupBasicBulkUploadTest(String manifestName, String successAsync) throws Exception {
+
+    private BulkUploadController setupBasicBulkUploadTest( String successAsync) throws Exception {
         File testImagesDirectory = new File(TestConstants.TEST_IMAGE_DIR);
         assertTrue(testImagesDirectory.isDirectory());
         List<File> uploadFiles = new ArrayList<File>();
         uploadFiles.addAll(FileUtils.listFiles(testImagesDirectory, new String[] { "jpg" }, false));
-        return setupBasicBulkUploadTest(manifestName, successAsync, uploadFiles);
+        return setupBasicBulkUploadTest(successAsync, uploadFiles);
     }
 
     @SuppressWarnings({ "unused" })
@@ -592,8 +454,6 @@ public class BulkUploadControllerITCase extends AbstractAdminControllerITCase {
         bulkUploadController.setProjectId(TestConstants.ADMIN_INDEPENDENT_PROJECT_ID);
 
         // setup controller
-        bulkUploadController.setUploadedFiles(Arrays.asList(new File(TestConstants.TEST_BULK_DIR + "image_manifest.xlsx")));
-        bulkUploadController.setUploadedFilesFileName(Arrays.asList("image_manifest.xlsx"));
         bulkUploadController.setFileProxies(proxyPair.getSecond());
         bulkUploadController.setAsync(false);
         bulkUploadController.getResource().setTitle("test");
@@ -611,8 +471,9 @@ public class BulkUploadControllerITCase extends AbstractAdminControllerITCase {
         // saving
         bulkUploadController.setServletRequest(getServletPostRequest());
         assertEquals(TdarActionSupport.SUCCESS_ASYNC, bulkUploadController.save());
-        bulkUploadController.checkStatus();
-        assertEquals(new Float(100), bulkUploadController.getPercentDone());
+        BulkUpdateStatusAction basa = checkStatus(bulkUploadController.getTicketId());
+        basa.checkStatus();
+        assertEquals(new Float(100), basa.getPercentDone());
 
         // int newInternalCount = getCollectionCount(CollectionType.INTERNAL);
         int newSharedCount = getCollectionCount(CollectionType.SHARED);
@@ -622,7 +483,7 @@ public class BulkUploadControllerITCase extends AbstractAdminControllerITCase {
         // ensure one shared collection created
         // evictCache();
 
-        List<Pair<Long, String>> details = bulkUploadController.getDetails();
+        List<Pair<Long, String>> details = basa.getDetails();
         logger.info("{}", details);
         Set<ResourceCollection> collections = new HashSet<ResourceCollection>();
         evictCache();
@@ -638,7 +499,7 @@ public class BulkUploadControllerITCase extends AbstractAdminControllerITCase {
 
             collections.addAll(resourceCollections);
         }
-        assertEquals("we should have a total of 3 collections (2 internal +1 shared)", 3, collections.size());
+        assertEquals("we should have a total of 3 collections (2 internal +2 shared)", 4, collections.size());
         for (ResourceCollection col : collections) {
             logger.debug("{} : {}", col, col.getResources());
             if (col.isInternal()) {
@@ -647,7 +508,7 @@ public class BulkUploadControllerITCase extends AbstractAdminControllerITCase {
                 assertEquals(2, col.getResources().size());
             }
         }
-        assertEquals("we should have one new adhoc collection", 1, newSharedCount - origSharedCount);
+        assertEquals("we should have one new adhoc collection", 2, newSharedCount - origSharedCount);
         // ensure N internal collections created
         // String msg = String.format("We should have %s new internal collections.  newcount:%s oldcount:%s", uploadFiles.size(),
         // newInternalCount, origInternalCount);
